# CLITools

./: Cargo.toml  sample.txt  urls.json
src/: image_resizer.rs  main.rs  password_generator.rs  system_info.rs  text_analyzer.rs  url_shortener.rs
