[package]
name = "cli_tools"
version = "0.1.0"
authors = ["Michael Kingh <kingmi96@students.rowan.edu>"]
edition = "2021"
description = "A CLI application deomstrating tools, such as a URL Shortener, Text Analyzer, System Info Tool, etc."
license = "MIT"
repository = "https://github.com/kingmi96/CLITools"
keywords = ["cli", "tools", "rust"]
categories = ["command-line-utilities"]
homepage = "https://github.com/kingmi96/CLITools"
documentation = "https://docs.rs/CLITools"

[dependencies]
md5 = "0.7"
clap = { version = "4.0", features = ["derive"] } # For argument parsing
reqwest = "0.11" # For HTTP requests
serde = { version = "1.0", features = ["derive"] } # For JSON parsing
serde_json = "1.0"
url = "2.2"
rand = "0.8" # For password generation
image = "0.24" # For image resizing
sysinfo = "0.29"
os_info = "3.4"
